# freecad_mcp

./: CURSOR_SETUP.md  InitGui.py  freecad_mcp.py  main.py  pyproject.toml
src/: freecad_bridge.py
tests/: test_bridge.py
