[project]
name = "freecad-mcp"
version = "0.1.0"
description = "FreeCAD integration through the Model Context Protocol"
authors = [
    {name = "FreeCAD MCP Contributors", email = ""}
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.1"
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
freecad-mcp = "main:main"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pytest-asyncio",
    "pytest-mock"
]

[project.urls]
"Homepage" = "https://github.com/bonninr/freecad_mcp"
"Bug Tracker" = "https://github.com/bonninr/freecad_mcp/issues"
